words added to cSpell settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,25 @@
 {
     "cSpell.ignoreWords": [
         "kivy"
+    ],
+    "cSpell.words": [
+        "ahorrar",
+        "aplicación",
+        "ayudar",
+        "desarrollaremos",
+        "diseñada",
+        "Esta",
+        "está",
+        "fácilmente",
+        "Futbolín",
+        "gestión",
+        "gestionar",
+        "multiplataforma",
+        "organizadores",
+        "organizar",
+        "proyecto",
+        "tiempo",
+        "todos",
+        "torneos"
     ]
 }
